kubernetes/apps/security/authentik/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - "auth.${SECRET_DOMAIN}"
  rules:
    - backendRefs:
        - name: authentik-server
          port: 80
